--- a/public/styles.css
+++ b/public/styles.css
@@ -14,12 +14,13 @@ body {
 .banner {
   width: 100%;
   height: 10rem;
-  background: rgb(201,221,148);
-  background: linear-gradient(61deg, rgba(201,221,148,1) 0%, rgba(143,198,144,1) 25%, rgba(109,184,141,1) 51%, rgba(143,198,144,1) 81%, rgba(201,221,148,1) 100%);
+  background: rgb(144,192,209);
+  background: radial-gradient(circle, rgba(144,192,209,1) 0%, rgba(38,50,56,1) 100%);
 }
+
 .login {
-  background: rgb(201,221,148);
-  background: linear-gradient(61deg, rgba(201,221,148,1) 0%, rgba(143,198,144,1) 25%, rgba(109,184,141,1) 51%, rgba(143,198,144,1) 81%, rgba(201,221,148,1) 100%);
+  background: rgb(144,192,209);
+  background: radial-gradient(circle, rgba(144,192,209,1) 0%, rgba(26,32,36,1) 94%);
   display: flex;
   flex-direction: column;
   align-items: center;
