--- a/public/styles.css
+++ b/public/styles.css
@@ -24,5 +24,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: 90vh;
+  padding-top: 10vh;
 }
